crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badShaderUnsupportedTexture.usdc
version https://git-lfs.github.com/spec/v1
oid sha256:a984703a7c4b1147547f3675374610d440066b7bc233007ee5bdcda25c07dd04
size 779
